# scrapping_pp

./: .gitignore  README.md  pyproject.toml
scrapping_pp/: __main__.py
scrapping_pp/amazon/: scrap_amazon.py
scrapping_pp/common/: viewer.py
